--- a/index.html
+++ b/index.html
@@ -4,36 +4,67 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <title>Triangle</title>
 </head>
 <body>
-    <div class="rows">
-        <div class="column">
-            <div class="circle"></div>
+    <div class="site">
+        <div class="triangle">
+            <div class="heading">
+                <h1>PYRAMID LIGHTING</h1>
+            </div>
+            <div class="light">
+                <div class="pyramid">
+                    <label for="row-inpujjjjjjjjjjjjjjjjjjjjjjlass="rows">Rows  :</label>
+                    <input type="number" class="input">
+                </div>
+                <div class="delay-input">
+                    <label for="delay" class="delay">Delay :</label>
+                    <input type="number" class="input">
+                </div>
+                <div class="buttons">
+                    <div class="start-button">
+                        <button class="start">Start   <i class="fa-solid fa-play"></i></button>
+                    </div>
+                    <div class="stop-button">
+                        <button class="stop">Stop  <i class="fa-solid fa-pause"></i></button>
+                    </div>
+                    
+                </div>   
+                <div class="head">
+                    <span>Number Of Rows</span>
+                </div>
+                 
+            </div>    
         </div>
-        <div class="column">
-            <div class="circle"></div>
-            <div class="circle"></div>
-        </div>
-        <div class="column">
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="circle"></div>
-        </div>
-        <div class="column">
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="circle"></div>
-        </div>
-        <div class="column">
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="circle"></div>
-            <div class="circle"></div>
-        </div>
-    </div>    
+        <!-- <div class="rows">
+            <div class="column">
+                <div class="circle"></div>
+            </div>
+            <div class="column">
+                <div class="circle"></div>
+                <div class="circle"></div>
+            </div>
+            <div class="column">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+            </div>
+            <div class="column">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+            </div>
+            <div class="column">
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+                <div class="circle"></div>
+            </div>
+        </div> -->
+    </div>        
 
     <script src="script.js"></script>
 </body>
