--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
             <div class="light">
                 <div class="pyramid">
-                    <label for="row-inpujjjjjjjjjjjjjjjjjjjjjjlass="rows">Rows  :</label>
+                    <label for="row-input="rows>Rows  :</label>
                     <input type="number" class="input">
                 </div>
                 <div class="delay-input">
