--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
 <body>
     <div class="site">
         <div class="triangle">
-            <div class="heading">
+            <div class="heading">       
                 <h1>PYRAMID LIGHTING</h1>
             </div>
             <div class="light">
                 <div class="pyramid">
-                    <label for="row-input="rows>Rows  :</label>
+                    <label for="row-input="rows>Rows :</label>
                     <input type="number" class="input">
+                    <button class="draw">Draw</button>
                 </div>
                 <div class="delay-input">
                     <label for="delay" class="delay">Delay :</label>
@@ -29,42 +30,18 @@
                     <div class="stop-button">
                         <button class="stop">Stop  <i class="fa-solid fa-pause"></i></button>
                     </div>
+                    <div class="restart-button">
+                        <button class="restart">Restart </button>
+                    </div>
                     
                 </div>   
-                <div class="head">
-                    <span>Number Of Rows</span>
-                </div>
                  
             </div>    
+
         </div>
-        <!-- <div class="rows">
-            <div class="column">
-                <div class="circle"></div>
-            </div>
-            <div class="column">
-                <div class="circle"></div>
-                <div class="circle"></div>
-            </div>
-            <div class="column">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-            </div>
-            <div class="column">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-            </div>
-            <div class="column">
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-                <div class="circle"></div>
-            </div>
-        </div> -->
     </div>        
+    <div class="circle"></div>
+    <div class="display_output"></div>
 
     <script src="script.js"></script>
 </body>
