--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
                         <input type="number" class="input">
                         <button class="draw">Draw</button>
                     </div>
-                    <div class="delay-input">
-                        <label for="delay" class="delay">Delay :</label>
-                        <input type="number" class="input">
-                    </div>
+                    <div class="whole">
+                        <div class="delay-input">
+                            <label for="delay" class="delay">Delay :</label>
+                            <input type="number" class="input">
+                        </div>
+                        <div class="color">
+                            <label for="color" class="color">Color :</label>
+                            <input type="color">
+                        </div>
+                    </div>    
                     <div class="buttons">
                         <div class="start-button">
                             <button class="start">Start   <i class="fa-solid fa-play"></i></button>
